# alpha-oracle

./: .gitignore  Anchor.toml  DEVELOPMENT.md  PROGRESS.md  README.md  STATUS.md  package-lock.json  package.json  tsconfig.json
app/: package.json
app/src/: client.ts
client/: init_oracle.ts  nansen_oracle.py  nansen_signals.json  package-lock.json  package.json  post_prediction.ts
client/src/: config.ts  demo.ts  init-oracle.ts  leaderboard.ts  oracle-agent.ts  verifier.ts
idl/: alpha_oracle.json
oracle-agent/: oracle.py  requirements.txt  verifier.py
programs/alpha_oracle/: Cargo.toml
programs/alpha_oracle/src/: lib.rs
trading/: live_signals.json
