[package]
name = "alpha-oracle"
version = "0.1.0"
description = "Verifiable on-chain trading signals"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "alpha_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
